# ls

./: .gitignore  Makefile  main.c  meson.build
include/: ft_ls.h  ls.h
lib/libft/src/printf/: ft_snprintf.c
src/: main.c  parse_flags.c  process_directories.c  process_files.c
subprojects/libft/: Makefile  meson.build
subprojects/libft/includes/: libft.h
subprojects/libft/src/: ft_error.c
subprojects/libft/src/printf/: ft_dprintf.c
