project('libft', 'c')

inc = include_directories('includes')

src = [
	'src/ft_atoi.c',
	'src/ft_isprint.c',
	'src/ft_memchr.c',
	'src/ft_putnbr.c',
	'src/ft_strdup.c',
	'src/ft_strncat.c',
	'src/ft_strtrim.c',
	'src/ft_atoi_base.c',
	'src/ft_itoa.c',
	'src/ft_memcmp.c',
	'src/ft_putnbr_fd.c',
	'src/ft_strequ.c',
	'src/ft_strncmp.c',
	'src/ft_strupcase.c',
	'src/ft_bzero.c',
	'src/ft_lstadd.c',
	'src/ft_memcpy.c',
	'src/ft_putstr.c',
	'src/ft_striter.c',
	'src/ft_strncpy.c',
	'src/ft_table_size.c',
	'src/ft_ceil.c',
	'src/ft_lstdel.c',
	'src/ft_memdel.c',
	'src/ft_putstr_fd.c',
	'src/ft_striteri.c',
	'src/ft_strnequ.c',
	'src/ft_tolower.c',
	'src/ft_count_word.c',
	'src/ft_lstdelone.c',
	'src/ft_memmove.c',
	'src/ft_strcat.c',
	'src/ft_strjoin.c',
	'src/ft_strnew.c',
	'src/ft_toupper.c',
	'src/ft_free_table.c',
	'src/ft_lstiter.c',
	'src/ft_memset.c',
	'src/ft_strchr.c',
	'src/ft_strlcat.c',
	'src/ft_strnstr.c',
	'src/ft_isalnum.c',
	'src/ft_lstmap.c',
	'src/ft_putchar.c',
	'src/ft_strclr.c',
	'src/ft_strlen.c',
	'src/ft_strrchr.c',
	'src/ft_isalpha.c',
	'src/ft_lstnew.c',
	'src/ft_putchar_fd.c',
	'src/ft_strcmp.c',
	'src/ft_strlowcase.c',
	'src/ft_strsplit.c',
	'src/ft_isascii.c',
	'src/ft_memalloc.c',
	'src/ft_putendl.c',
	'src/ft_strcpy.c',
	'src/ft_strmap.c',
	'src/ft_strstr.c',
	'src/ft_isdigit.c',
	'src/ft_memccpy.c',
	'src/ft_putendl_fd.c',
	'src/ft_strdel.c',
	'src/ft_strmapi.c',
	'src/ft_strsub.c',
	'src/ft_error.c',
	'src/printf/big_int.c',
	'src/printf/big_int_addition.c',
	'src/printf/big_int_division.c',
	'src/printf/big_int_exponentiation.c',
	'src/printf/big_int_multiplication.c',
	'src/printf/big_int_multiplication_by_int.c',
	'src/printf/big_int_power_of_10.c',
	'src/printf/big_int_shift_left.c',
	'src/printf/ceil.c',
	'src/printf/dragon4_core.c',
	'src/printf/dragon4_core_rounding.c',
	'src/printf/dragon4_core_start_value.c',
	'src/printf/dragon4_format_positional.c',
	'src/printf/dragon4_format_scientific.c',
	'src/printf/dragon4_print_float64.c',
	'src/printf/dragon4_print_inf_nan.c',
	'src/printf/flags.c',
	'src/printf/float64_to_integer_conversion.c',
	'src/printf/ft_dprintf.c',
	'src/printf/ft_printf.c',
	'src/printf/ft_snprintf.c',
	'src/printf/ft_vdprintf.c',
	'src/printf/ft_vsnprintf.c',
	'src/printf/length.c',
	'src/printf/length_modifier.c',
	'src/printf/log_base_2.c',
	'src/printf/precision.c',
	'src/printf/print_char.c',
	'src/printf/print_float_part1.c',
	'src/printf/print_float_part2.c',
	'src/printf/print_integer_part1.c',
	'src/printf/print_integer_part2.c',
	'src/printf/print_integer_part3.c',
	'src/printf/print_left_adjust.c',
	'src/printf/print_none_specifier.c',
	'src/printf/print_percent.c',
	'src/printf/print_pointer.c',
	'src/printf/print_string.c',
	'src/printf/printf_core.c',
	'src/printf/specifier.c',
	'src/printf/wchartobuf.c'
]

libft = static_library('ft', src, include_directories: inc)

libft_dep = declare_dependency(include_directories: inc, link_with: libft) 
